# django-delete-all

./: .gitignore  .tool-versions  LICENSE  MANIFEST.in  README.md  publish.py  pyproject.toml
src/django_delete_all/: __init__.py  admin.py  apps.py  cli.py  safety.py
src/django_delete_all/management/commands/: delete_all.py
src/django_delete_all/templates/admin/: delete_all_confirmation.html
tests/testapp/: __init__.py  admin.py  models.py
tests/testapp/migrations/: 0001_initial.py
tests/testsite/: settings.py
