[project]
name = "django-delete-all"
version = "0.1.0"
description = "Django admin utilities for bulk deletion operations with CLI support"
readme = "README.md"
authors = [
    { name = "matmiad", email = "m.miadlikowski@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "Django>=3.2",
    "click>=8.0.0",
]
keywords = ["django", "admin", "delete", "bulk", "management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
django-delete-all = "django_delete_all.cli:main"

[project.urls]
Homepage = "https://github.com/matmiad/django-delete-all"
Repository = "https://github.com/matmiad/django-delete-all"
Issues = "https://github.com/matmiad/django-delete-all/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/django_delete_all"]